feat: main first deploy

--- a/app/views/posts/_nav.html.erb
+++ b/app/views/posts/_nav.html.erb
@@ -70,7 +70,7 @@
             바로가기
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdownPortfolio">
-            <a href="https://class.likelion.org/accounts/login/?next=/board/notices/" target="_blank" class="dropdown-item">클래스라이언</a>
+            <a href="https://www.codelion.net/" target="_blank" class="dropdown-item">코드라이언</a>
             <a href="https://syulion.goorm.io/" target="_blank" class="dropdown-item">구름 edu</a>
             <a href="https://www.facebook.com/likelionsahmyook/" target="_blank" class="dropdown-item">Facebook</a>
             <a href="https://www.instagram.com/likelion_syu/" target="_blank" class="dropdown-item">Instagram</a>
