--- a/app/views/posts/_nullpost.html.erb
+++ b/app/views/posts/_nullpost.html.erb
@@ -1,6 +1,6 @@
 <% if Post.count == 0 %>
 <div class="nullpost">
-  <h1 class="null-h1">:( 게시글이 없습니다!</h1>
+  <h1 class="null-h1">게시글이 없습니다 :(</h1>
   <% if user_signed_in? %>
     <% if current_user.has_role? 'admin' %>
       <%= link_to "첫 번째 게시글 작성하기→", new_post_path, class:"null-link"%>
